Addressing issues in Version 1.0 beta's InjectedJS Wrapped ins.js in a function to isolate it Moved Sizzle to a separate injected file Added Margin to the bottom of submit buttons

--- a/Client/Extension/css/popup.css
+++ b/Client/Extension/css/popup.css
@@ -139,6 +139,11 @@ div#retrieveOutput table.results tbody td {
 	white-space: nowrap;
 }
 
+div#fetchDiv {
+	max-height: 230px;
+	overflow-y: auto;
+}
+
 /**
 	Tab Bar 
 */
