--- a/Server/css/client-common.css
+++ b/Server/css/client-common.css
@@ -108,6 +108,7 @@ input[type='submit'], button, input[type='button']
 {
 	border: 0px;
 	box-shadow: 1px 1px 5px #666;
+	margin-bottom: 1ex;
 }
 
 /** Save Button **/
